Modify column is now a fixed size
It looks odd otherwise when there's not many columns in the table and
the column is huge.

--- a/css/listing.css
+++ b/css/listing.css
@@ -56,3 +56,7 @@ input {
 .pagination_curpage {
     width: 40px;
 }
+.modify-options {
+    width: 70px;
+    padding-left: .5em;
+}
